--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,20 +1,7 @@
-database:
-  healthcheck_timeout: 10
-  uri: ""
-  database: ""
-  migrations_path: "migrations/mongo"
-  clientOptions:
-    connectTimeout: 30s
-    auth:
-      authSource: ""
-      username: ""
-      password: ""
 server:
-  host: ""
-  grpc_port: ""
-  request_timeout: 10
-  insert_duration: 4
-  path_to_data: "./input/"
+  port: "${PDKS_SERVER_PORT}"
+database:
+  uri: "${PDKS_DATABASE_CONNECTION_STRING}"
 
 
 
